--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ before_script:
 	- pushd "$HOME/mysql.1"
 #	- tar --gzip --extract --verbose --skip-old-files --directory="$HOME/mysql.1" --file="$HOME/.mysql_dl_tars/mysql-5.6.40-linux-glibc2.12-x86_64.tar.gz"
 #	- pushd "$HOME/mysql.1/mysql-5.6.40-linux-glibc2.12-x86_64"
-	- export TCI_D_MYSQL=$(pwd)
+#	- export TCI_D_MYSQL=$(pwd)
 #	- "$TCI_D_MYSQL/scripts/mysql_install_db" --datadir="$TCI_D_MYSQL/data"
 
 script:
