--- a/.travis.yml
+++ b/.travis.yml
@@ -42,15 +42,15 @@ install:
 before_script:
   - echo 'before script'
   - ps -ef
-  - mysqld --verbose --help
+#  - mysqld --verbose --help
 
   # not the nicest thing to do over and over? cache instead?
   # (my test showed a download speed of ~50 megabytes per second - proxy?)
   # (well that was my first test - fluke? - subsequent ones were a lot slower!)
-# - mkdir "$HOME/.mysql_dl_tars"
-# - pushd "$HOME/.mysql_dl_tars"
-# - wget -c -d https://dev.mysql.com/get/Downloads/MySQL-5.6/mysql-5.6.40-linux-glibc2.12-x86_64.tar.gz
-# - popd
+  - mkdir "$HOME/.mysql_dl_tars"
+  - pushd "$HOME/.mysql_dl_tars"
+  - wget -c -d https://dev.mysql.com/get/Downloads/MySQL-5.6/mysql-5.6.40-linux-glibc2.12-x86_64.tar.gz
+  - popd
 
   # unpack & instal
   # - thanks to https://superuser.com/q/311301 and
