--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ before_script:
   # not the nicest thing to do over and over? cache instead?
   # (my test showed a download speed of ~50 megabytes per second - proxy?)
   # (well that was my first test - fluke? - subsequent ones were a lot slower!)
-  - mkdir "$HOME/.mysql_dl_tars"
+  - if [ ! -d "$HOME/.mysql_dl_tars" ]; then mkdir "$HOME/.mysql_dl_tars"; fi
   - pushd "$HOME/.mysql_dl_tars"
   - wget -c -d https://dev.mysql.com/get/Downloads/MySQL-5.6/mysql-5.6.40-linux-glibc2.12-x86_64.tar.gz
   - popd
@@ -55,12 +55,13 @@ before_script:
   # unpack & instal
   # - thanks to https://superuser.com/q/311301 and
   # - http://www.bluecrownsoftware.com/article/271/Installing-MySQL-without-Root-Access-on-Linux
-# - mkdir "$HOME/mysql.1"
-# - pushd "$HOME/mysql.1"
-# - tar --gzip --extract --verbose --skip-old-files --directory="$HOME/mysql.1" --file="$HOME/.mysql_dl_tars/mysql-5.6.40-linux-glibc2.12-x86_64.tar.gz"
-# - pushd "$HOME/mysql.1/mysql-5.6.40-linux-glibc2.12-x86_64"
-# - export TCI_D_MYSQL=$(pwd)
-# - "$TCI_D_MYSQL/scripts/mysql_install_db" --datadir="$TCI_D_MYSQL/data"
+  - if [ ! -d "$HOME/mysql.5.6.40" ]; then mkdir "$HOME/mysql.5.6.40"; fi
+  - pushd "$HOME/mysql.5.6.40"
+  - export TCI_D_MYSQL_ROOT=$(pwd)
+  - tar --gzip --extract --verbose --skip-old-files --directory="$TCI_D_MYSQL_ROOT" --file="$HOME/.mysql_dl_tars/mysql-5.6.40-linux-glibc2.12-x86_64.tar.gz"
+  - pushd "$TCI_D_MYSQL_ROOT/mysql-5.6.40-linux-glibc2.12-x86_64"
+  - export TCI_D_MYSQL=$(pwd)
+  - "$TCI_D_MYSQL/scripts/mysql_install_db" --datadir="$TCI_D_MYSQL/data"
 
 script:
 #  - .travis/run.sh
