--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ before_script:
   # (well that was my first test - fluke? - subsequent ones were a lot slower!)
   - if [ ! -d "$HOME/.mysql_dl_tars" ]; then mkdir "$HOME/.mysql_dl_tars"; fi
   - pushd "$HOME/.mysql_dl_tars"
-  - wget -c -d https://dev.mysql.com/get/Downloads/MySQL-5.6/mysql-5.6.40-linux-glibc2.12-x86_64.tar.gz
+  - if [ ! -f 'mysql-5.6.40-linux-glibc2.12-x86_64.tar.gz' ]; then wget -c -d 'https://dev.mysql.com/get/Downloads/MySQL-5.6/mysql-5.6.40-linux-glibc2.12-x86_64.tar.gz'; fi
   - popd
 
   # unpack & instal
@@ -65,14 +65,14 @@ before_script:
   - echo "$TCI_D_MYSQL_ROOT"
   - echo "$TCI_D_MYSQL"
   - pushd "$TCI_D_MYSQL/scripts/"
-  - if [ -f "mysql_install_db" ]; then ./mysql_install_db --basedir="$TCI_D_MYSQL" --datadir="$TCI_D_MYSQL/data"; fi
+  - if [ -f 'mysql_install_db' ]; then ./mysql_install_db --basedir="$TCI_D_MYSQL" --datadir="$TCI_D_MYSQL/data" --log-error="$TCI_D_MYSQL_ROOT/mysql.err" --pid-file="$TCI_D_MYSQL_ROOT/mysql.pid" --socket="$TCI_D_MYSQL_ROOT/thesock"; fi
   - popd
 
 script:
 #  - .travis/run.sh
   - echo 'script'
 # - ./bin/mysqld --basedir="$HOME/mysql.1" --datadir="$TCI_D_MYSQL/data" --log-error="$HOME/mysql.1/mysql.err" --pid-file="$HOME/mysql.1/mysql.pid" --socket="$HOME/mysql.1/thesock" --port=3306 &
-  - sleep 30
+#  - sleep 30
 # - ./bin/mysqladmin --socket="$HOME/mysql.1/thesock" shutdown
 
 #  - ./bin/mysql --socket=[Base MySQL Directory]/thesock
