--- a/.travis.yml
+++ b/.travis.yml
@@ -75,11 +75,9 @@ script:
   - ls -lasht /tmp
   # https://stackoverflow.com/a/3822649/4036945
   # my_command || { echo 'my_command failed' ; exit 1; }
-  - echo "$TCI_D_MYSQL_ROOT/mysql.pid"
-  - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock shutdown || { kill -SIGTERM $(<"$TCI_D_MYSQL_ROOT/mysql.pid") }
+  - export TCI_MYSQL_PID_1="`cat $TCI_D_MYSQL_ROOT/mysql.pid`"
+  - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock shutdown || { kill -SIGTERM $TCI_MYSQL_PID_1 }
   - sleep 10
-  - echo "$TCI_D_MYSQL_ROOT/mysql.pid"
-  - cat "$TCI_D_MYSQL_ROOT/mysql.pid"
   - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock ping
   - ps -ef
   - ls -lasht /tmp
@@ -89,9 +87,8 @@ script:
   - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock ping
   - ps -ef
   - ls -lasht /tmp
-  - echo "$TCI_D_MYSQL_ROOT/mysql.pid"
-  - cat "$TCI_D_MYSQL_ROOT/mysql.pid"
-  - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock shutdown || { kill -SIGTERM $(<"$TCI_D_MYSQL_ROOT/mysql.pid") }
+  - export TCI_MYSQL_PID_2="`cat $TCI_D_MYSQL_ROOT/mysql.pid`"
+  - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock shutdown || { kill -SIGTERM $TCI_MYSQL_PID_2 }
   - sleep 10
   - cat "$TCI_D_MYSQL_ROOT/mysql.pid"
   - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock ping
