--- a/.travis.yml
+++ b/.travis.yml
@@ -73,10 +73,9 @@ script:
   - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock ping
   - ps -ef
   - ls -lasht /tmp
-  # https://stackoverflow.com/a/3822649/4036945
-  # my_command || { echo 'my_command failed' ; exit 1; }
   - export TCI_MYSQL_PID_1="`cat $TCI_D_MYSQL_ROOT/mysql.pid`"
-  - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock shutdown || { kill -SIGTERM $TCI_MYSQL_PID_1 }
+  # bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock shutdown
+  - kill -SIGTERM $TCI_MYSQL_PID_1
   - sleep 10
   - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock ping
   - ps -ef
@@ -88,7 +87,8 @@ script:
   - ps -ef
   - ls -lasht /tmp
   - export TCI_MYSQL_PID_2="`cat $TCI_D_MYSQL_ROOT/mysql.pid`"
-  - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock shutdown || { kill -SIGTERM $TCI_MYSQL_PID_2 }
+  # bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock shutdown
+  - kill -SIGTERM $TCI_MYSQL_PID_2
   - sleep 10
   - cat "$TCI_D_MYSQL_ROOT/mysql.pid"
   - bin/mysqladmin --defaults-file="$TCI_D_MYSQL_ROOT/my.cnf" --socket=/tmp/.thesock ping
